refactor RecommendService: clean up interface for algorithm integration